--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     </section>
     <footer>
         <p>Thank you for visiting my page!</p>
+        <p>&copy; 2024 Alfa University College. All rights reserved.</p>
         <div class="external-links">
             <a class="button" href="https://alfa.edu.my" target="_blank"_blank><img src="university-solid.svg" alt="University"> ALFA University</a>
             <a class="button" href="https://wa.me/+60166946162" target="_blank"><img src="whatsapp.svg" alt="WhatsApp">Mr. Zainuddin Bin Johori</a>
